<resources>
    <string name="app_name">Sistema Control de Ventas</string>
    <string name="inicio">Inicio</string>
    <string name="cliente">Cliente</string>
    <string name="clientes">Clientes</string>
    <string name="compras">Compras</string>
    <string name="por_cobrar">Cuentas X Cobrar</string>
    <string name="por_pagar">Cuentas X Pagar</string>
    <string name="proveedores">Proveedor</string>
    <string name="provee">Proveedores</string>
    <string name="ventas">Ventas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagen_inicial">Imagen Inicial</string>
    <string name="otros">Otros</string>
    <string name="iva">IVA</string>
    <string name="varios">Varios</string>
    <string name="el_quiosco_de_juanita">El Quiosco de Juanita</string>
    <string name="otro">Otros</string>
    <string name="drawer_open">Open_Drawer</string>
    <string name="drawer_close">Close_Drawer</string>
    <string name="salir">Salir</string>
    <string name="clientest">CLIENTES</string>
    <string name="nombre">Nombre:</string>
    <string name="telefono">Telefono:</string>
    <string name="tel_fono">Teléfono</string>
    <string name="nombret">Nombre</string>
    <string name="apodo">Apodo:</string>
    <string name="apodot">Apodo</string>
    <string name="guardar">Guardar</string>
    <string name="mostrar">Mostrar</string>
    <string name="id">ID:</string>
    <string name="idi">ID</string>
    <string name="nombreti">Nombre</string>
    <string name="tel_fono1">Teléfono:</string>
    <string name="proveea">Provee</string>
    <string name="provees">Provee:</string>
    <string name="fechas">Fecha:</string>
    <string name="fecha">Fecha</string>
    <string name="pagadap">Pagada:</string>
    <string name="pagada">Pagada</string>
    <string name="cat_id_tit">ID:</string>
    <string name="cat_id">ID Cat:</string>
    <string name="catid">ID Cat</string>
    <string name="cat_name_tit">Categoría:</string>
    <string name="cat_desc_tit">Descripción:</string>
    <string name="cat_id_mas">ID</string>
    <string name="cat_name_mas">Categoría</string>
    <string name="cat_desc_mas">Descripción</string>
    <string name="strgurda">Guardar</string>
    <string name="categor_as">Categorías</string>
    <string name="art_culos">Artículos</string>
    <string name="inventario">Inventario</string>
    <string name="sisconven">SISCONVEN</string>
    <string name="robgutgom_gmail_com">robgutgom@gmail.com</string>
    <string name="id_prov">Id Prov:</string>
    <string name="cedriftt">Cedrif:</string>
    <string name="cedrif">Cedrif</string>
    <string name="cedirif">CediRif</string>
    <string name="seleccione">SELECCIONE</string>
    <string name="pagadat">Pagada:</string>
    <string name="por_pagaro">Por Pagar.</string>
    <string name="pagadao">Pagada</string>
    <string name="idcpra">IdCpra</string>
    <string name="idart">IdArt</string>
    <string name="idped">IdPed</string>
    <string name="cantidad">Cantidad</string>
    <string name="costo">Costo</string>
    <string name="costod">Costo $</string>
    <string name="estatus">Estatus:</string>
    <string name="no_activa">No Activa.</string>
    <string name="activa">Activa</string>
    <string name="pedido">Pedido</string>
    <string name="id_cte">Id Cte:</string>
    <string name="costodd">Costod</string>
    <string name="id_arc">ID Arc</string>
    <string name="id_ped">ID Ped</string>
    <string name="add_item">Add Item</string>
    <string name="art_culo">Artículo:</string>
    <string name="descripci_n">Descripción</string>
    <string name="descripcin">Descripción:</string>
    <string name="imagen">Imagen:</string>
    <string name="imag_n">Imagén</string>
    <string name="artculo">Artículo</string>
    <string name="marca">Marca:</string>
    <string name="marcaa">Marca</string>
    <string name="image_de_fondo">Image de Fondo</string>
</resources>