<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="3dp"
    android:paddingStart="15dp"
    android:paddingTop="5dp"
    android:paddingEnd="15dp"
    android:paddingBottom="5dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:padding="2dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/tvwIdTit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:minWidth="20dp"
            android:text="@string/id"
            android:textSize="12sp"
            style="@style/boldText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvwNombTit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:minWidth="100dp"
            android:text="@string/nombre"
            android:textSize="12sp"
            style="@style/boldText"
            app:layout_constraintStart_toEndOf="@+id/tvwIdTit"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvwTeleTit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:minWidth="100dp"
            android:text="@string/tel_fono1"
            android:textSize="12sp"
            style="@style/boldText"
            app:layout_constraintStart_toEndOf="@+id/tvwNombTit"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvwCedrifTit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:minWidth="100dp"
            android:text="@string/apodot"
            android:textSize="12sp"
            style="@style/boldText"
            app:cardCornerRadius="6dp"
            app:layout_constraintStart_toEndOf="@+id/tvwTeleTit"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvwId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="1dp"
            android:minWidth="20dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvwIdTit"
            tools:text="@string/idi" />

        <TextView
            android:id="@+id/tvwIdcat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="1dp"
            android:minWidth="100dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tvwId"
            app:layout_constraintTop_toBottomOf="@+id/tvwNombTit"
            tools:text="@string/nombreti" />

        <TextView
            android:id="@+id/tvwArticulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="1dp"
            android:minWidth="100dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tvwIdcat"
            app:layout_constraintTop_toBottomOf="@+id/tvwTeleTit"
            tools:text="@string/tel_fono" />

        <TextView
            android:id="@+id/tvwMarca"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="1dp"
            android:minWidth="100dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tvwArticulo"
            app:layout_constraintTop_toBottomOf="@+id/tvwCedrifTit"
            tools:text="@string/apodo" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>